k8s/k8s-tutorial/k8s-tutorial-001/setup/k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - host: my-app.com
    http:
      paths:
      - path: / #/(.*)
        pathType: Prefix
        backend:
          service:
            name: my-app-svc
            port:
              number: 3000
